// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth0 test page matches snapshot 1`] = `
<DocumentFragment>
  Welcome Baa! You have 100 Points. 
  .emotion-0 {
  margin: 0;
  color: #1976d2;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: rgba(25, 118, 210, 0.4);
}

.emotion-0:hover {
  text-decoration-color: inherit;
}

<a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-0"
    href="/api/auth/logout"
  >
    Logout
  </a>
</DocumentFragment>
`;

exports[`Auth0 test page matches snapshot DE 1`] = `
<DocumentFragment>
  Willkommen Baa! Du hast 100 Punkte. 
  .emotion-0 {
  margin: 0;
  color: #1976d2;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: rgba(25, 118, 210, 0.4);
}

.emotion-0:hover {
  text-decoration-color: inherit;
}

<a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-0"
    href="/api/auth/logout"
  >
    Abmelden
  </a>
</DocumentFragment>
`;
